add users login and registration and another

--- a/devices_farm/templates/devices_farm/devices.html
+++ b/devices_farm/templates/devices_farm/devices.html
@@ -1,5 +1,5 @@
 {% extends "devices_farm/base.html" %}
 
 {% block content %}
-<p> ALL DEVICES HERE </p>
+<h1> DEVICES PAGE </h1>
 {% endblock content %}
