--- a/devices_farm/templates/devices_farm/index.html
+++ b/devices_farm/templates/devices_farm/index.html
@@ -1,5 +1,8 @@
 {% extends "devices_farm/base.html" %}
 
 {% block content %}
-<p> Hello people!!</p>
+<h1>INDEX PAGE</h1>
+<p>
+    Welcome to Home page of new tool for device control.
+</p>
 {% endblock content %}
