--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -10,7 +10,7 @@
         {{ form.as_p }}
 
         <button name="Submit">Log in</button>
-        <input type="hidden" name="next" value="{% url 'devices_farm:devices' %}">
+        <input type="hidden" name="next" value="{% url 'devices_farm:index' %}">
     </form>
 
 {% endblock content %}
