--- a/devices_farm/templates/devices_farm/base.html
+++ b/devices_farm/templates/devices_farm/base.html
@@ -6,17 +6,17 @@
 </head>
 <body>
     <p>
+        <a href="{% url 'devices_farm:index' %}">Devices Farm</a> -
         {% if user.is_authenticated %}
             <a href="{% url 'devices_farm:devices' %}">Devices</a> - Hello, {{ user.username }}.
             <a href="{% url 'users:logout' %}">Log out</a>
         {% else %}
-            <a href="{% url 'users:register' %}">Register</a> -
-            <a href="{% url 'users:login' %}">Log in</a>
+            <a href="{% url 'users:login' %}">Log in</a> -
+            <a href="{% url 'users:register' %}">Register</a>
         {% endif %}
     </p>
-    <b>NEED DEFINE</b>
     {% block content %}
-    <!--(% device %)-->
+        <!--(% device %)-->
     {% endblock content %}
 </body>
 </html>
