--- a/devices_farm/templates/devices_farm/device.html
+++ b/devices_farm/templates/devices_farm/device.html
@@ -1,9 +1,19 @@
 {% extends "devices_farm/base.html" %}
 
 {% block content %}
+    <table border="1px solid black">
+        <caption>{{ device.device_name }}</caption>
+        <tr>
+            <th>Parameter name</th>
+            <th >Value</th>
+        </tr>
 
-    {% for name, value in device.get_fields %}
-        <p>{{ name }} => {{ value }}</p>
-    {% endfor %}
+        {% for name, value in device.get_fields %}
+            <tr>
+                <td>{{ name }}</td>
+                <td>{{ value }}</td>
+            </tr>
+        {% endfor %}
+    </table>
 
 {% endblock content %}
