--- a/devices_farm/templates/devices_farm/devices.html
+++ b/devices_farm/templates/devices_farm/devices.html
@@ -1,7 +1,7 @@
 {% extends "devices_farm/base.html" %}
 
 {% block content %}
-    <table border="1" width="50%">
+    <table border="1" width="50%" align="center">
         <tr>
             <th>Devices</th>
         </tr>
@@ -26,5 +26,8 @@
         </tr>
         {% endfor %}
     </table>
+    <form action="{% url 'devices_farm:add_device' %}">
+        <button name="submit">Add new device</button>
+    </form>
 
 {% endblock content %}
