--- a/devices_farm/templates/devices_farm/devices.html
+++ b/devices_farm/templates/devices_farm/devices.html
@@ -17,7 +17,7 @@
                 <h3>No devices have been added yet.</h3>
             </li>
         {% endfor %}
-    <form action="{% url 'devices_farm:add_device' %}">
+    <form action="{% url 'devices_farm:add-device' %}">
         <button name="submit">Add new device</button>
     </form>
 
