--- a/devices_farm/templates/devices_farm/add_device.html
+++ b/devices_farm/templates/devices_farm/add_device.html
@@ -2,11 +2,14 @@
 
 {% block content %}
     <h2>ADD NEW DEVICE</h2>
-    <form action="{% url 'devices_farm:add_device' %}" class="form" method="post">
+    <form action="{% url 'devices_farm:add-device' %}" class="form" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button name="submit">
-            Add device
+        <button name="Add">
+            Add new device
         </button>
     </form>
+    <a href="{% url 'devices_farm:devices' %}">
+        <button name="Cancel">Cancel</button>
+    </a>
 {% endblock content %}
