--- a/devices_farm/templates/devices_farm/device.html
+++ b/devices_farm/templates/devices_farm/device.html
@@ -1,8 +1,8 @@
 {% extends "devices_farm/base.html" %}
 
 {% block content %}
+    <h1>{{ device.device_name }}</h1>
     <table border="1px solid black">
-        <caption>{{ device.device_name }}</caption>
         <tr>
             <th>Parameter name</th>
             <th >Value</th>
