--- a/devices_farm/templates/devices_farm/base.html
+++ b/devices_farm/templates/devices_farm/base.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>EXCELLENT</title>
-</head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{% static 'devices_farm/devices_farm.css' %}">
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script></head>
 <body>
-    <p>
-        <a href="http://127.0.0.1:8000/admin/">ADMIN PAGE</a> -
-        {% if user.is_authenticated %}
-            <a href="{% url 'devices_farm:devices' %}">Devices</a> - Hello, {{ user.username }}.
-            <a href="{% url 'users:logout' %}">Log out</a>
-        {% else %}
-            <a href="{% url 'users:login' %}">Log in</a> -
-            <a href="{% url 'users:register' %}">Register</a>
-        {% endif %}
-    </p>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Blitz Devices Farm</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="http://127.0.0.1:8000/admin/">ADMIN PAGE</a>
+                </li>
+
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'devices_farm:devices' %}">Devices</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Hello, {{ user.username }}.</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>
+                </li>
+
+                {% else %}
+                <li class="nav-item">
+                    <a href="{% url 'users:login' %}">Log in</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'users:register' %}">Register</a>
+                </li>
+                {% endif %}
+
+            </ul>
+        </div>
+    </nav>
     {% block head %}
     {% endblock head %}
 
