--- a/devices_farm/templates/devices_farm/devices.html
+++ b/devices_farm/templates/devices_farm/devices.html
@@ -1,4 +1,5 @@
 {% extends "devices_farm/base.html" %}
+{% load static %}
 
 {% block content %}
     <h1>All Devices</h1>
@@ -28,7 +29,7 @@
     {% endfor %}
 
     <form action="{% url 'devices_farm:add-device' %}">
-        <button name="submit">Add new device</button>
+        <button name="submit" class="btn btn-primary">Add new device</button>
     </form>
 
 {% endblock content %}
