--- a/devices_farm/templates/devices_farm/base.html
+++ b/devices_farm/templates/devices_farm/base.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="{% url 'devices_farm:devices' %}">Devices</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Hello, {{ user.username }}.</a>
+                    <a class="nav-link" href="{% url 'users:profile' %}">Hello, {{ user.username }}.</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>
