--- a/devices_farm/templates/devices_farm/base.html
+++ b/devices_farm/templates/devices_farm/base.html
@@ -9,36 +9,41 @@
     <link rel="stylesheet" href="{% static 'devices_farm/devices_farm.css' %}">
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script></head>
-<body>
+<body class="filter-dark">
+
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Blitz Devices Farm</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="http://127.0.0.1:8000/admin/">ADMIN PAGE</a>
-                </li>
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Blitz Devices Farm</a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://127.0.0.1:8000/admin/">ADMIN PAGE</a>
+                    </li>
 
-                {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'devices_farm:devices' %}">Devices</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:profile' %}">Hello, {{ user.username }}.</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>
-                </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'devices_farm:devices' %}">Devices</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'users:profile' %}">Hello, {{ user.username }}.</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>
+                    </li>
 
-                {% else %}
-                <li class="nav-item">
-                    <a href="{% url 'users:login' %}">Log in</a>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'users:register' %}">Register</a>
-                </li>
-                {% endif %}
+                    {% else %}
+                    <li class="nav-item">
+                        <a href="{% url 'users:login' %}">Log in</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'users:register' %}">Register</a>
+                    </li>
+                    {% endif %}
 
-            </ul>
+                </ul>
+            </div>
         </div>
     </nav>
     {% block head %}
@@ -48,22 +53,46 @@
     {% block content %}
     {% endblock content %}
 
-    {% block pagination %}
-      {% if is_paginated %}
-          <div class="pagination">
-              <span class="page-links">
-                  {% if page_obj.has_previous %}
-                      <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
-                  {% endif %}
-                  <span class="page-current">
-                      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                  </span>
-                  {% if page_obj.has_next %}
-                      <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
-                  {% endif %}
-              </span>
-          </div>
-      {% endif %}
-    {% endblock %}
+<p>
+{% block pagination %}
+  {% if is_paginated %}
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-end">
+          {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">Previous</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+            </li>
+          {% else %}
+            <li class="page-item disabled">
+              <a class="page-link" href="#" tabindex="-1">Previous</a>
+            </li>
+
+          {% endif %}
+
+          <li class="page-item active">
+              <a class="page-link" href="#">{{ page_obj.number }}<span class="sr-only">{{ page_obj.number }}</span></a>
+          </li>
+
+          {% if page_obj.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="{{ request.path }}?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="{{ request.path }}?page={{ page_obj.next_page_number }}">Next</a>
+            </li>
+          {% else %}
+            <li class="page-item disabled">
+              <a class="page-link" href="#">Next</a>
+            </li>
+          {% endif %}
+      </ul>
+    </nav>
+  {% endif %}
+{% endblock %}
+</p>
+
 </body>
 </html>
