--- a/devices_farm/templates/devices_farm/base.html
+++ b/devices_farm/templates/devices_farm/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static 'css/devices_farm.css' %}">
+    <link rel="shortcut icon" href="{% static 'blitz_icon.jpg' %}">
 
 <body class="filter-dark">
 
